tests/snapshots/opendbc/generator/chrysler/chrysler_ram_dt.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 53
    name: PCM_2
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: ENG_TORQUE_REQ
        multiplexer_indicator: Plain
        start_bit: 3
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 7
        unit: ""
        receivers:
          - XXX
      - name: ENG_TORQUE_OUT
        multiplexer_indicator: Plain
        start_bit: 19
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 133
    name: TCM_1
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: SHIFT_PENDING
        multiplexer_indicator: Plain
        start_bit: 2
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: ACTUAL_GEAR
        multiplexer_indicator: Plain
        start_bit: 11
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: DESIRED_GEAR
        multiplexer_indicator: Plain
        start_bit: 15
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: TC_LOCKED
        multiplexer_indicator: Plain
        start_bit: 17
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - XXX
      - name: OUTPUT_SPEED
        multiplexer_indicator: Plain
        start_bit: 31
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 65534
        unit: rpm
        receivers:
          - XXX
      - name: INPUT_SPEED
        multiplexer_indicator: Plain
        start_bit: 47
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 65534
        unit: rpm
        receivers:
          - XXX
      - name: OUTPUT_SPEED_SIGN
        multiplexer_indicator: Plain
        start_bit: 57
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 135
    name: ABS_2
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DRIVER_BRAKE
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 137
    name: ESP_4
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: Yaw_Rate
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: -327.68
        min: -327.68
        max: 327.66
        unit: deg/s
        receivers:
          - XXX
      - name: Acceleration
        multiplexer_indicator: Plain
        start_bit: 32
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.08
        offset: -10.24
        min: -10.24
        max: 10.08
        unit: m/s2
        receivers:
          - XXX
  - id:
      Standard: 164
    name: EPS_3
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DASM_FAULT
        multiplexer_indicator: Plain
        start_bit: 34
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Activation_Status
        multiplexer_indicator: Plain
        start_bit: 48
        size: 3
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Driver_Override
        multiplexer_indicator: Plain
        start_bit: 35
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Hands_on_Wheel
        multiplexer_indicator: Plain
        start_bit: 51
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 166
    name: LKAS_COMMAND
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: STEERING_TORQUE
        multiplexer_indicator: Plain
        start_bit: 10
        size: 11
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: -1024
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LKAS_CONTROL_BIT
        multiplexer_indicator: Plain
        start_bit: 24
        size: 3
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DASM_FAULT
        multiplexer_indicator: Plain
        start_bit: 51
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 221
    name: Center_Stack_1
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LKAS_Button
        multiplexer_indicator: Plain
        start_bit: 53
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - XXX
      - name: Traction_Button
        multiplexer_indicator: Plain
        start_bit: 54
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 650
    name: Center_Stack_2
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LKAS_Button
        multiplexer_indicator: Plain
        start_bit: 57
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _stellantis_common_ram_dt_generated.dbc
  - Signal:
      message_id:
        Standard: 133
      name: ACTUAL_GEAR
      comment: "0xd = P, 0x1-8 = D (actual gear), 0xb = R or N?? TODO find R vs N"
  - Signal:
      message_id:
        Standard: 153
      name: ACC_Engaged
      comment: "SENT BY FORWARD CAMERA 1 = ACTIVE, 3 = ENGAGED, 0 = DISENGAGED/OFF"
  - Signal:
      message_id:
        Standard: 166
      name: LKAS_CONTROL_BIT
      comment: "0=IDLE, 1=HAS 2=LKAS 3=ABSD, 4=TJA, 7=SNA"
  - Signal:
      message_id:
        Standard: 250
      name: Auto_High_Beam
      comment: "1 = HIGH BEAMS OK 0 = HIGH BEAMS OFF "
  - Signal:
      message_id:
        Standard: 250
      name: LKAS_LANE_LINES
      comment: "9 = LEFT CAUTION, 11 = VERY LEFT CAUTION 10 = RIGHT CAUTION, 14 = VERY RIGHT, 4 = NO LINES DETECTED, 3 = LINES DETECTED, SYSTEM ACTIVE"
  - Signal:
      message_id:
        Standard: 464
      name: Driver_Seatbelt_Status
      comment: 1 unbuckled 0 buckled
  - Signal:
      message_id:
        Standard: 792
      name: High_Beam_Lever_Status
      comment: "1 is high beam, 0 reg"
