tests/snapshots/opendbc/generator/chrysler/chrysler_ram_hd.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 545
    name: EPS_3
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DASM_FAULT
        multiplexer_indicator: Plain
        start_bit: 34
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Activation_Status
        multiplexer_indicator: Plain
        start_bit: 48
        size: 3
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Driver_Override
        multiplexer_indicator: Plain
        start_bit: 35
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Hands_on_Wheel
        multiplexer_indicator: Plain
        start_bit: 51
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 630
    name: LKAS_COMMAND
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: STEERING_TORQUE
        multiplexer_indicator: Plain
        start_bit: 10
        size: 11
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: -1024
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LKAS_CONTROL_BIT
        multiplexer_indicator: Plain
        start_bit: 24
        size: 3
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DASM_FAULT
        multiplexer_indicator: Plain
        start_bit: 51
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _stellantis_common_ram_hd_generated.dbc
